# step

./: .gitignore  CMakeLists.txt  README.md  step.gram
Day1/: CMakeLists.txt  README.md
Day1/src/: main.cpp
Day11-12/: CMakeLists.txt  README.md
Day11-12/src/: ExpressionStatementNode.cpp  ExpressionStatementNode.hpp  GroupNode.cpp  IAst.hpp  Lexeme.cpp  LiteralNode.cpp  Parser.hpp  define.hpp  main.cpp
Day11-12/tests/: expression.step  expression3.step  expression4.step  relational2.step
Day13/src/: BinaryOpNode.cpp  BinaryOpNode.hpp  GroupNode.hpp  IError.cpp  Lexeme.hpp  LexemeReader.cpp  LexemeReader.hpp  LiteralNode.hpp  ModuleNode.cpp  ModuleNode.hpp  Parser.cpp  main.cpp
Day13/tests/: relational.step
Day2/: CMakeLists.txt  README.md
Day2/src/: FileReader.cpp  FileReader.hpp  LexemeReader.cpp  LexemeReader.hpp  LineReader.cpp  main.cpp
Day2/tests/: minus.step
Day3/: CMakeLists.txt  README.md
Day3-4-5/: CMakeLists.txt
Day3-4-5/src/: ErrorManager.hpp  IError.cpp  Lexeme.hpp  LexemeReader.cpp  LexemeReader.hpp  LexicalError.cpp  LineReader.hpp
Day3-4-5/tests/: error.step  mixed.step
Day3/src/: ErrorManager.cpp  ErrorManager.hpp  ExpectationError.cpp  ExpectationError.hpp  FileReader.cpp  GenericError.cpp  GenericError.hpp  IError.cpp  IError.hpp  IReader.hpp  Lexeme.cpp  Lexeme.hpp  LexemeReader.cpp  LexemeReader.hpp  MisplacedNumSeparator.cpp  MisplacedNumSeparator.hpp  MissingArgumentValue.cpp  MissingArgumentValue.hpp  NoInputFile.cpp  NoInputFile.hpp  NotValidFile.cpp  NotValidFile.hpp  NumberTooLarge.cpp  NumberTooLarge.hpp  NumberTooSmall.cpp  NumberTooSmall.hpp  UnexpectedEoi.cpp  UnexpectedEoi.hpp  UnrecognizedOption.cpp  UnrecognizedOption.hpp  UnrecognizedToken.cpp  UnrecognizedToken.hpp  main.cpp
Day3/src/cmd/: ArgumentParser.cpp
Day3/tests/: tokens.step
Day6/: README.md
Day6-7/: README.md
Day6-7/src/: GroupNode.hpp  IReader.cpp  Lexeme.cpp  Lexeme.hpp  LexicalError.hpp  LiteralNode.hpp  Parser.cpp  PreCompilationError.hpp
Day6-7/tests/: float.step  plus.step  star.step  tokens.step
Day6/src/: ErrorManager.cpp  Lexeme.hpp  LexemeReader.cpp  LexemeReader.hpp  LexicalError.cpp  PreCompilationError.cpp  main.cpp
Day6/tests/: integer.step
Day8/: CMakeLists.txt  README.md
Day8/src/: BinaryOpNode.cpp  BinaryOpNode.hpp  FileReader.hpp  GroupNode.cpp  IAst.hpp  LexemeReader.cpp  LexemeReader.hpp  LiteralNode.cpp  Parser.cpp  Parser.hpp  main.cpp
Day8/tests/: slash.step
Day9-10/: CMakeLists.txt  README.md
Day9-10/src/: BinaryOpNode.cpp  BinaryOpNode.hpp  ErrorManager.cpp  GroupNode.cpp  IAst.hpp  (+6 more)
legacy/: CMakeLists.txt
legacy/src/: common.h  error.cpp  frame.cpp  lexer.h  main.h  parser.cpp  parser.h  token.cpp  token.h
legacy/tests/: array.step  print.step  recursion.step  var.step
src/: _temp.cpp  ast.cpp  ast.h  cmdopts.c  cmdopts.h  common.h  config.h  error.h  frame.cpp  frame.h  lexer.cpp  lexer.h  main.c  main.cpp  main.h  object.cpp  object.h  parser.cpp  parser.h  step.c  token.cpp  token.h  typedefs.h
tests/: array.step  assignment.step  expression.step  ifelse.step  print.step  recursion.step  syntax.step  test.step  var.step
(+36 files in other folders)
